--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -20,9 +20,9 @@ jobs:
         uses: actions/first-interaction@v1.2.0
           with:
             # Token for the repository. Can be passed in using {{ secrets.GITHUB_TOKEN }}
-            repo-token: 
+            repo-token: {{ secrets.GITHUB_TOKEN }}
             # Comment to post on an individual's first issue
-            issue-message: # optional
+            issue-message: hello # optional
             # Comment to post on an individual's first pull request
-            pr-message: # optional
+            pr-message: test # optional
           
