--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -18,11 +18,11 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - name: First interaction
         uses: actions/first-interaction@v1.2.0
-          with:
-            # Token for the repository. Can be passed in using {{ secrets.GITHUB_TOKEN }}
-            repo-token: {{ secrets.GITHUB_TOKEN }}
-            # Comment to post on an individual's first issue
-            issue-message: hello # optional
-            # Comment to post on an individual's first pull request
-            pr-message: test # optional
+        with:
+          # Token for the repository. Can be passed in using {{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          # Comment to post on an individual's first issue
+          issue-message: hello # optional
+          # Comment to post on an individual's first pull request
+          pr-message: test # optional
           
