--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v3
       - name: Login to docker hub
-        run: docker login -u ${{ secret.DOCKER_USERNAME }} -p password ${{ secret.DOCKER_PASSWORD }}
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p password ${{ secrets.DOCKER_PASSWORD }}
       - name: Build docker image
         run: docker build -t nielsmartens/node_api_test .
       - name: Publish image to docker hub
