--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -21,7 +21,7 @@ jobs:
     needs: build
     runs-on: [aws-ec2]
     steps: 
-      - name: Pull image from docker hub
+      - name: Pull the image from docker hub
         run: docker pull nielsmartens/node_api_test:latest
       - name: Delete old container
         run: docker rm -f nodejs-app-container
