--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -14,7 +14,7 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build docker image
         run: docker build -t nielsmartens/node_api_test .
-      - name: Publish the image to docker hub
+      - name: Publish image to docker hub
         run: docker push nielsmartens/node_api_test:latest
 
   deploy:
